--- a/_includes/author-profile-custom-links.html
+++ b/_includes/author-profile-custom-links.html
@@ -8,3 +8,13 @@
         <i class="fab fa-goodreads" aria-hidden="true"></i> Goodreads
     </a>
 </li>
+<li>
+    <a href="https://www.innoq.com/en/staff/dr-simon-harrer/">
+        <img src="/innoq.ico" /> INNOQ
+    </a>
+</li>
+<li>
+    <a href="https://java.by-comparison.com/">
+        <i class="fab fa-book" aria-hidden="true"></i> Java by Comparison
+    </a>
+</li>
