--- a/_includes/author-profile-custom-links.html
+++ b/_includes/author-profile-custom-links.html
@@ -10,11 +10,11 @@
 </li>
 <li>
     <a href="https://www.innoq.com/en/staff/dr-simon-harrer/">
-        <img src="/innoq.ico" /> INNOQ
+        <img src="/innoq.svg"  /> INNOQ
     </a>
 </li>
 <li>
     <a href="https://java.by-comparison.com/">
-        <i class="fab fa-book" aria-hidden="true"></i> Java by Comparison
+        <i class="fas fa-book" aria-hidden="true"></i> Java by Comparison
     </a>
 </li>
