--- a/_includes/author-profile-custom-links.html
+++ b/_includes/author-profile-custom-links.html
@@ -10,7 +10,7 @@
 </li>
 <li>
     <a href="https://www.innoq.com/en/staff/dr-simon-harrer/">
-        <img src="/innoq.svg"  /> INNOQ
+        <img src="/innoq.svg" width="15" /> INNOQ
     </a>
 </li>
 <li>
