--- a/_includes/author-profile-custom-links.html
+++ b/_includes/author-profile-custom-links.html
@@ -1,12 +1,5 @@
 <li>
-    <a href="https://www.amazon.com/Simon-Harrer/e/B07942J993/">
-        <i class="fab fa-amazon" aria-hidden="true"></i> Amazon
-    </a>
-</li>
-<li>
-    <a href="https://www.goodreads.com/author/show/17847059.Simon_Harrer">
-        <i class="fab fa-goodreads" aria-hidden="true"></i> Goodreads
-    </a>
+    WORK
 </li>
 <li>
     <a href="https://www.innoq.com/en/staff/dr-simon-harrer/">
@@ -14,7 +7,20 @@
     </a>
 </li>
 <li>
+    AUTHOR
+</li>
+<li>
     <a href="https://java.by-comparison.com/">
         <i class="fas fa-book" aria-hidden="true"></i> Java by Comparison
+    </a>
+</li>
+<li>
+    <a href="https://www.amazon.com/Simon-Harrer/e/B07942J993/">
+        <i class="fab fa-amazon" aria-hidden="true"></i> Amazon
+    </a>
+</li>
+<li>
+    <a href="https://www.goodreads.com/author/show/17847059.Simon_Harrer">
+        <i class="fab fa-goodreads" aria-hidden="true"></i> Goodreads
     </a>
 </li>
